# zsh-rust

./: .bumplus.toml  .env-sample  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .tmuxinator.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties  zsh-rust.zsh
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  .tflint.hcl  committed.toml  markdown-link-config.json
.github/workflows/: confluence.yml  lint.yml
config/: base.zsh  main.zsh
docs/: CONTRIBUTING.rst  commands.md  components.md  contributing.md  env-vars.md  functions.md  index.md  releasing.md  roadmap.md
docs/contribute/: github-flow.md
docs/examples/: common.md
docs/include/installation/: antibody.md  antigen.md  oh-my-zsh.md
docs/source/: CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst
internal/: base.zsh  main.zsh  packages.zsh
pkg/: base.zsh  main.zsh
provision/docker-compose/: dev.yml  test.yml
provision/docker/app/: Dockerfile
provision/docker/check/: Dockerfile
provision/docker/docs/: Dockerfile
provision/generator/: README.yaml
provision/generators/: README.yaml
provision/task/: docker.yml  docs.yml  go.yml  python.yml  terraform.yml  version.yml
src/: base.zsh
src/helpers/: tools.zsh
tests/: test_config.zunit
